plugins {
    id 'java-library'
    id 'com.adarshr.test-logger' version '3.0.0'
    id 'eclipse'
}

version = '1.1.0-j8'

sourceCompatibility = 1.8
targetCompatibility = 1.8

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
    }

    /*test {
        java {
            srcDirs = ['test']
        }
    }*/
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
}

/*test {
    useJUnit {
        excludeCategories = ['mslinks.ReadTestData', 'mslinks.WriteTestData', 'mslinks.Examples']
    }
}*/

eclipse {
    classpath {
        defaultOutputDir = file('build/eclipse-default')
        file.whenMerged {
            entries.each { entry ->
                if (entry.kind == 'src' && entry.hasProperty('output')) {
                    entry.output = entry.output.replace('bin/', "build/eclipse/")
                }
            }
        }
    }
}